# rest-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.tmp  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  async__client_8cpp.html  async__client_8cpp__incl.map  async__client_8cpp__incl.md5  async__client_8hpp.html  async__client_8hpp.js  async__client_8hpp__dep__incl.map  async__client_8hpp__dep__incl.md5  async__client_8hpp__incl.map  async__client_8hpp__incl.md5  async__client_8hpp_source.html  callgrind.out.17029  classes.html  classrest__cpp_1_1ApiKeyInterceptor-members.html  classrest__cpp_1_1ApiKeyInterceptor.html  classrest__cpp_1_1ApiKeyInterceptor.js  classrest__cpp_1_1ApiKeyInterceptor__coll__graph.map  classrest__cpp_1_1ApiKeyInterceptor__coll__graph.md5  classrest__cpp_1_1ApiKeyInterceptor__inherit__graph.md5  classrest__cpp_1_1AsyncPager-members.html  classrest__cpp_1_1AsyncPager.html  classrest__cpp_1_1AsyncPager.js  classrest__cpp_1_1AsyncRestClient-members.html  classrest__cpp_1_1AsyncRestClient.html  classrest__cpp_1_1AsyncRestClient.js  classrest__cpp_1_1BearerAuthInterceptor-members.html  classrest__cpp_1_1BearerAuthInterceptor.html  classrest__cpp_1_1BearerAuthInterceptor.js  classrest__cpp_1_1BearerAuthInterceptor__coll__graph.map  classrest__cpp_1_1BearerAuthInterceptor__inherit__graph.md5  (+309 more)
.github/workflows/: ci.yml  doxygen.yml
cmake/: rest_cppConfig.cmake.in
include/rest_cpp/: async_client.hpp  client.hpp  config.hpp  connection.hpp  connection_pool.hpp  endpoint.hpp  error.hpp  http_method.hpp  middleware.hpp  pagination.hpp  request.hpp  response.hpp  result.hpp  serialize_impl.hpp  serialize_nlohmann.hpp  serialize_simdjson.hpp  url.hpp
include/rest_cpp/connection/: connection.hpp  connection_pool.hpp  connection_pool_types.hpp
perf/: async_client_perf.cpp  perf.md  sync_client_perf.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  (+71 more)
src/: async_client.cpp  client.cpp  connection_pool.cpp
tests/: test_async_client.cpp  test_connection.cpp  test_connection_pool.cpp  test_http_method.cpp  test_request.cpp  test_response.cpp  test_result.cpp  test_sanity.cpp  test_sdk_features.cpp  test_serialization_nlohmann.cpp  test_serialization_simdjson.cpp  test_sync_client.cpp  test_url.cpp
